# SAXR

./: .gitignore  README.html  README.md  TODO.html  TODO.md  dataprep.py  datarepgen.py  dowork.sh  export3D.py  pyproject.toml
ARchi/: README.md
ARchi/Animation/: README.md  ecoANIM.json
ARchi/Placing/: README.md
ARchi/Proximity/: README.md  irisLOD.json
ARchi/Story/: README.md  salesSTORY.json  settings0.json
ARchi/Storytelling/: README.md  salesSTORY.json  settings1.json  settings2.json
docu/work/: settings.json
frontends/ARchi/: README.md
frontends/Unity/: README.md
frontends/Web3D/: .gitignore  README.md  next.config.js  package-lock.json  package.json  vercel.json  vitest.config.ts
samples/area/: config.json
samples/burnout/: burnout.csv  config.json  settings.json
samples/cluster/: config.json
samples/data/: healthcosts.csv  perCapita.xlsx
samples/eco/: config.json  perCapita.json  settings.json
samples/energy/: config.json  heating.json  settings.json
samples/fruits/: config.json  settings.json  viz.json
samples/geo/: georepgen.py  healthcosts.csv  healthcostsCalc.xls  settings.json  swissmap.json
samples/ingredients/: config.json  settings.json
samples/iris/: config.json  (+1 more)
saxr/: __init__.py  area_plot.py  constants.py  encoding.py  generator.py  helpers.py  line_plot.py  panels.py  plots.py  stack_plot.py  surface_plot.py
schemas/: config.json  datareps.json  settings.json  specs.json
tests/: README.md  conftest.py  test_encoding.py  test_export3d.py  test_generator.py  test_helpers.py  test_plots.py  test_regression.py
(+148 files in other folders)
