[project]
name = "saxr"
version = "0.1.0"
description = "SAXR – Situated Analytics in eXtended Reality: data visualization pipeline"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
geo = ["geopandas"]
test = ["pytest"]
blender = []  # bpy is bundled with Blender, not pip-installable

[project.scripts]
saxr-generate = "saxr.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
