[project]
name = "saxr"
version = "0.1.0"
description = "SAXR – Situated Analytics in eXtended Reality: data visualization pipeline"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "jsonschema",
]

[project.optional-dependencies]
geo = ["geopandas"]
test = ["pytest"]
blender = []  # bpy is bundled with Blender, not pip-installable

[tool.setuptools.packages.find]
include = ["saxr*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]